# cache-rules

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  ROADMAP.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
skills/cache-rules/: SKILL.md
src/cache_rules/: cli.py
src/cache_rules/checks/: base.py  registry.py  rule4_models.py  rule6_forks.py
src/cache_rules/metrics/: cache.py  cost.py
src/cache_rules/parser/: transcripts.py
src/cache_rules/report/: renderer.py
tests/: test_checks.py  test_metrics.py  test_parser.py  test_report.py  test_smoke.py
tests/fixtures/: corrupt_lines.jsonl  valid_session.jsonl
